# PortfolioBacktester

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  spy_1999.csv
.devcontainer/: devcontainer.json
app/: Portfolio_Tester.py  Random_Portfolio.py  backtester.py  experiments.py  front.py  front2.py  front_portfolio.py  front_random.py  front_simulation.py  load_data.py  momentum.py
app/pages/: Momentum_Now.py  Momentum_Portfolio.py  Random_Strategy_Simulator.py  Strategy_Simulator.py  Update_Data.py
data/: Dockerfile
