[tool.poetry]
name = "portfoliobacktester"
version = "0.1.0"
description = ""
authors = ["Andrey Sadovykh <sadovykh@gmail.com>"]
license = "APACHE 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.37.0"
yfinance = "^0.2.41"
plotly = "^5.23.0"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
